
- #11646: Add colors to error message hints.
  (Christiana Anthony, review by Florian Angeletti)

- #11653: Add the -no-absname option to ocamlc, ocamlopt and ocamldep.
  (Abiola Abdulsalam, review by Sébastien Hinderer and Florian Angeletti)

- #11696: Add the -no-g option to ocamlc and ocamlopt.
  (Abiola Abdulsalam, review by Sébastien Hinderer, Nicolás Ojeda Bär and
  Florian Angeletti)

### Internal/compiler-libs changes:
- #11027: Separate typing counter-examples from type_pat into retype_pat;
  type_pat is no longer in CPS.
  (Jacques Garrigue and Takafumi Saikawa, review by Gabriel Scherer)

- #11018: Clean up Types.Variance, adding a description of the lattice used,
  and defining explicitly composition.
  (Jacques Garrigue, review by Gabriel Scherer)

- #11364: Allow `make -C testsuite promote` to take `TEST` and `LIST` variables
  (Antal Spector-Zabusky, review by Gabriel Scherer and David Allsopp)

- #11446: document switch compilation (lambda/switch.ml)
  (Gabriel Scherer, review by Luc Maranget and Vincent Laviron)

- #11601, #11612, #11628: Clean up some global state handling
  in emitcode, bytepackager, spill.
  (Hugo Heuzard, Stefan Muenzel, review by Vincent Laviron, Gabriel Scherer
   and Nathanaëlle Courant)

- #11627: use return values instead of globals for linear scan intervals
  (Stefan Muenzel, review by Nicolás Ojeda Bär)

- #11634: Dll.open_dll now properly handle opening for execution while already
  opened for checking
  (Hugo Heuzard, review by Nicolás Ojeda Bär)

- #11569: Remove hash type encoding
  (Hyunggyu Jang, review by Gabriel Scherer and Florian Angeletti)

- #11568: Encode inline record types in Path.t
  (Leo White and Hyunggyu Jang, review by Gabriel Scherer)

- #11745: Debugger and toplevels: embed printer types rather than
  reading their representations from topdirs.cmi at runtime.
  (Sébastien Hinderer, review by Florian Angeletti, Nicolás Ojeda Bär and
  Gabriel Scherer)

### Build system:
