@@ -93,6 +93,7 @@ let configuration_variables =
   p "bytecomp_c_libraries" bytecomp_c_libraries;
   p "native_c_libraries" native_c_libraries;
   p "native_pack_linker" native_pack_linker;
+  p_bool "native_compiler" native_compiler;
   p "architecture" architecture;
   p "model" model;
   p_int "int_size" Sys.int_size;
@@ -119,6 +120,7 @@ let configuration_variables =
   p_bool "afl_instrument" afl_instrument;
   p_bool "windows_unicode" windows_unicode;
   p_bool "supports_shared_libraries" supports_shared_libraries;
+  p_bool "native_dynlink" native_dynlink;
   p_bool "naked_pointers" naked_pointers;
 
   p "exec_magic_number" exec_magic_number;
