@@ -150,6 +150,11 @@ val stack_safety_margin: int
     intermediate computations of some instructions, or the event
     handler. *)
 
+val native_compiler: bool
+(** Whether the native compiler is available or not
+
+    @since 5.1 *)
+
 val architecture: string
 (** Name of processor type for the native-code compiler *)
 
@@ -238,6 +243,11 @@ val supports_shared_libraries: bool
 (** Whether shared libraries are supported
 
     @since 4.08 *)
+
+val native_dynlink: bool
+(** Whether native shared libraries are supported
+
+    @since 5.1 *)
 
 val afl_instrument : bool
 (** Whether afl-fuzz instrumentation is generated by default *)
